# g1.cu

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  SPEC.md  justfile  pyproject.toml
bench/: contact_ref.npz  contact_solve_ref.npz  implicit_ref.npz  nanoG1_train_curve.csv  ref_traj.npz
models/ppo_ckpt/: finish_best.pt  reward_curve.csv  reward_curve_fused.csv
scripts/: aba_np.py  aba_solve_test.py  bench_env_phys.py  bench_mjx.py  bench_mujoco.py  bench_rollout.py  bench_warp.py  contact_np.py  contact_np2.py  export_model.py  gen_aba_kernel.py  gen_contact_ref.py  gen_contact_solve_ref.py  gen_contact_validate.py  gen_implicit_ref.py  gen_reference.py  play.py  play_finish.py  plot_compare.py  ppo.py  ppo_fused.py  profile_ppo.py  ref_dynamics_np.py  render_finish.py  render_mp4.py  test_implicit.py  test_stability.py  warp_examples.py  warp_probe.py  warp_sim.py  warp_tile.py
src/: aba.cuh  aba_bias.cuh  aba_codegen.cuh  aba_factor.cuh  aba_factor_test.cu  aba_fp16.cuh  aba_recompute.cuh  aba_solvem_multi.cuh  aba_test.cu  bench_nn.cu  contact.cuh  contact_DESIGN.md  deviceq.cu  dynamics.cu  dynamics.cuh  env_qacc.cuh  g1_env.cu  g1_model.h  sim.cu  sim_aba.cu  sim_aba_codegen.cu  sim_aba_coop.cu  sim_aba_fp16.cu  sim_aba_recompute.cu  sim_aba_smem.cu  sim_contact.cu  test_bias.cu  test_envqacc.cu  test_implicit.cu  test_solvem_multi.cu
tests/: test_aba.py  test_m0.py
