[project]
name = "g1cu"
version = "0.1.0"
description = "Hyperspecialized fully-fused GPU simulator + on-GPU RL loop for the Unitree G1 humanoid"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jax[cuda12]>=0.10.1",
    "mujoco>=3.9.0",
    "mujoco-mjx>=3.9.0",
    "mujoco-warp>=3.9.0.1",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "warp-lang>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "matplotlib>=3.9",
]
